# WEB_HW-10

homework-10 - VER-3/django_project/: pyproject.toml
homework-10 - VER-3/django_project/hw_project/: db.sqlite3  docker-compose.yaml
homework-10 - VER-3/django_project/hw_project/hw_project/: settings.py
homework-10 - VER-3/django_project/hw_project/quotes/: urls.py  views.py
homework-10 - VER-3/django_project/hw_project/quotes/templates/quotes/: base.html  index copy.html  index.html
homework-10 - VER-3/django_project/hw_project/users/: forms.py  urls.py  views.py
homework-10 - VER-3/django_project/hw_project/utils/: migration.py
hw_project/hw_project/: settings.py
hw_project/users/: forms.py  urls.py  views.py
